; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/sunrpc/extr_svcsock.c_copy_pages_to_kvecs.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/sunrpc/extr_svcsock.c_copy_pages_to_kvecs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kvec = type { i64, i32 }
%struct.page = type { i32 }

@PAGE_SIZE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.kvec*, %struct.page**, i32)* @copy_pages_to_kvecs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @copy_pages_to_kvecs(%struct.kvec* %0, %struct.page** %1, i32 %2) #0 {
  %4 = alloca %struct.kvec*, align 8
  %5 = alloca %struct.page**, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.kvec* %0, %struct.kvec** %4, align 8
  store %struct.page** %1, %struct.page*** %5, align 8
  store i32 %2, i32* %6, align 4
  store i32 0, i32* %7, align 4
  store i32 0, i32* %8, align 4
  br label %9

9:                                                ; preds = %13, %3
  %10 = load i32, i32* %8, align 4
  %11 = load i32, i32* %6, align 4
  %12 = icmp slt i32 %10, %11
  br i1 %12, label %13, label %38

13:                                               ; preds = %9
  %14 = load %struct.page**, %struct.page*** %5, align 8
  %15 = load i32, i32* %7, align 4
  %16 = sext i32 %15 to i64
  %17 = getelementptr inbounds %struct.page*, %struct.page** %14, i64 %16
  %18 = load %struct.page*, %struct.page** %17, align 8
  %19 = call i32 @page_address(%struct.page* %18)
  %20 = load %struct.kvec*, %struct.kvec** %4, align 8
  %21 = load i32, i32* %7, align 4
  %22 = sext i32 %21 to i64
  %23 = getelementptr inbounds %struct.kvec, %struct.kvec* %20, i64 %22
  %24 = getelementptr inbounds %struct.kvec, %struct.kvec* %23, i32 0, i32 1
  store i32 %19, i32* %24, align 8
  %25 = load i64, i64* @PAGE_SIZE, align 8
  %26 = load %struct.kvec*, %struct.kvec** %4, align 8
  %27 = load i32, i32* %7, align 4
  %28 = sext i32 %27 to i64
  %29 = getelementptr inbounds %struct.kvec, %struct.kvec* %26, i64 %28
  %30 = getelementptr inbounds %struct.kvec, %struct.kvec* %29, i32 0, i32 0
  store i64 %25, i64* %30, align 8
  %31 = load i32, i32* %7, align 4
  %32 = add nsw i32 %31, 1
  store i32 %32, i32* %7, align 4
  %33 = load i64, i64* @PAGE_SIZE, align 8
  %34 = load i32, i32* %8, align 4
  %35 = sext i32 %34 to i64
  %36 = add nsw i64 %35, %33
  %37 = trunc i64 %36 to i32
  store i32 %37, i32* %8, align 4
  br label %9

38:                                               ; preds = %9
  %39 = load i32, i32* %7, align 4
  ret i32 %39
}

declare dso_local i32 @page_address(%struct.page*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
